Edit title and favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="img/fav.png">
+		<link rel="shortcut icon" href="img/fav.ico">
 		<!-- Author Meta -->
 		<meta name="author" content="colorlib">
 		<!-- Meta Description -->
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Resume</title>
+		<title>Jeff McCracken - a web developer</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet"> 
 			<!--
@@ -71,14 +71,13 @@
 					</div>						
 					<div class="col-lg-6 col-md-12 banner-left">
 						<h1 class="text-white">
-							Hi, I’m <br>
-							<span>Etta Jennings</span> <br>
-							Art Director						
+							Hey, I’m <br>
+							<span>Jeff McCracken</span> <br>
+							Web Developer						
 						</h1>
 						<p class="mx-auto text-white  mt-20 mb-40">
 							Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod temp <br> or incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
 						</p>
-						<a href="#" class="text-uppercase header-btn">Let Us Talk</span></a>
 					</div>
 				</div>
 			</div>
@@ -408,8 +407,8 @@
 					<div class="row d-flex justify-content-center">
 						<div class="menu-content pb-20 col-lg-8">
 							<div class="title text-center">
-								<h1 class="mb-10">If you need, Just drop us a line</h1>
-								<p>Who are in extremely love with eco friendly system.</p>
+								<h1 class="mb-10">If you need, feel free to contact me</h1>
+								<p>I would love to hear from you</p>
 							</div>
 						</div>
 					</div>										
